# sudoku-solver-API

./: Cargo.toml  README.md  Shuttle.toml  wrangler.toml
.github/workflows/: rust.yml
src/: field.rs  lib.rs  main.rs  solver.rs  sudoku.rs
testcase/: err1.json  err2.json  err3.json  prob1.json  prob2.json  zeros.json
